-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8.4
-
-
b51e9b5da (dev), b29fb3972 (6.10), aa4c08068 (6.9), e36c2abc3 (tqtc/lts-6.8), a1e3a77c8 (dev), 77da820c2 (6.10), f23be467c (tqtc/lts-6.8)
Issue Overview
Even when using the same video file, the background color differs when the video is played in Windows’ default Media Player versus in Qt’s Media Player Example app.
Steps to Reproduce
1. Play the mp4 file with Windows’ default Media Player and take a screenshot.
(Please obtain the mp4 file from the support request on SalesForce or contact hitoshiito individually.)
2. Open the screenshot in a paint application, use the color picker to check the background color, and confirm in the “Edit Colors” dialog that it is RGB(0, 0, 0).
3. Play the same mp4 file in the Media Player Example application included with Qt (Qt\Examples\Qt-6.8.4\multimedia\player) and take a screenshot.
4. Open the screenshot in a paint application, use the color picker to check the background color, and confirm that it is RGB(1, 0, 1).
Request
The original reporter urgently requests a method to play the video in the Qt Media Player Example with the same background color as in Windows Media Player.
If there is a way to avoid this issue by frame conversion or other methods, please let us know.
- relates to
-
QTBUG-140158 [video frame converter] cpu conversions do not take color range into accont
-
- Reported
-
For Gerrit Dashboard: QTBUG-140122 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
675579,4 | Windows Media Foundations: read color space information from media | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
675581,3 | VideoTextureHelper: normalize color range in rgba-style formats | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
675690,2 | Windows Media Foundations: read color space information from media | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
675702,2 | Windows Media Foundations: read color space information from media | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
675708,2 | Windows Media Foundations: read color space information from media | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
678756,2 | VideoTextureHelper: normalize color range in rgba-style formats | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
678827,2 | VideoTextureHelper: normalize color range in rgba-style formats | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |