Windows Media Foundations: read color space information from media

The D3DPresentEngine was completely ignoring the color space
information. We should use this information to populate the QVideoFrame.

Pick-to: 6.9 6.8
Task-number: QTBUG-140122
Change-Id: Idfee819bb8df3d2393b68680aae588ce2c4c38a9
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit b51e9b5dafd992eb6678efbc697691a938b637b2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>